--- a/views/articles.handlebars
+++ b/views/articles.handlebars
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron text-center">
   <h1>All Articles</h1>
   <p>Click on an article to read it, or leave a note.</p>
 </div>
